[package]
name = "atcoder-rust-{{project-name}}"
version.workspace = true
edition.workspace = true

[dependencies]
num.workspace = true
num-derive.workspace = true
ndarray.workspace = true
nalgebra.workspace = true
alga.workspace = true
libm.workspace = true
rand.workspace = true
rand_distr.workspace = true
petgraph.workspace = true
indexmap.workspace = true
regex.workspace = true
lazy_static.workspace = true
ordered-float.workspace = true
ascii.workspace = true
permutohedron.workspace = true
superslice.workspace = true
itertools.workspace = true
itertools-num.workspace = true
maplit.workspace = true
either.workspace = true
im-rc.workspace = true
fixedbitset.workspace = true
bitset-fixed.workspace = true
proconio.workspace = true
text_io.workspace = true
whiteread.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
